feat: improve settings descriptions

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Αποτυχία εκκίνησης του Aliucord</string>
   <string name="settings_theme">Θέμα</string>
-  <string name="settings_advanced">Προηγμένες επιλογές</string>
-  <string name="settings_appearance">Εμφάνιση</string>
-  <string name="settings_developer_options">Επιλογές προγραμματιστών</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Εκκαθάριση προσωρινής μνήμης</string>
+  <string name="settings_header_advanced">Προηγμένες επιλογές</string>
+  <string name="settings_header_appearance">Εμφάνιση</string>
+  <string name="setting_developer_options">Επιλογές προγραμματιστών</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Εκκαθάριση προσωρινής μνήμης</string>
   <string name="setting_dynamic_color">Δυναμικό χρώμα</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Διατήρηση patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Μη διαγράψετε patched APKs μετά την εγκατάσταση (για χειροκίνητη εγκατάσταση)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">Σύστημα</string>
   <string name="theme_dark">Σκοτεινό</string>
   <string name="theme_light">Φωτεινό</string>
