--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Gagal untuk membuka Aliucord</string>
   <string name="settings_theme">Tema</string>
-  <string name="settings_advanced">Canggih</string>
-  <string name="settings_appearance">Tampilan</string>
-  <string name="settings_developer_options">Opsi Pengembang</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Bersihkan cache</string>
+  <string name="settings_header_advanced">Canggih</string>
+  <string name="settings_header_appearance">Tampilan</string>
+  <string name="setting_developer_options">Opsi Pengembang</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Bersihkan cache</string>
   <string name="setting_dynamic_color">Warna dinamis</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Simpan APK yang ditambal</string>
   <string name="setting_keep_patched_apks_desc">Jangan hapus APK yang sudah ditambal setelah memasang (untuk memasang secara manual)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">Sistem</string>
   <string name="theme_dark">Gelap</string>
   <string name="theme_light">Terang</string>
