--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -40,17 +40,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Aliucordの起動に失敗しました</string>
   <string name="settings_theme">テーマ</string>
-  <string name="settings_advanced">高度な設定</string>
-  <string name="settings_appearance">外観</string>
-  <string name="settings_developer_options">開発者向けオプション</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">キャッシュを消去</string>
+  <string name="settings_header_advanced">高度な設定</string>
+  <string name="settings_header_appearance">外観</string>
+  <string name="setting_developer_options">開発者向けオプション</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">キャッシュを消去</string>
   <string name="setting_dynamic_color">ダイナミックカラー</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">パッチを適用した APK を維持</string>
   <string name="setting_keep_patched_apks_desc">インストール後にパッチ適用された APK を削除しないでください(手動でインストールする場合)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">システム</string>
   <string name="theme_dark">ダーク</string>
   <string name="theme_light">ライト</string>
