--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">설치된 앱이 없어요!</string>
   <string name="launch_aliucord_fail">Aliucord 실행 실패</string>
   <string name="settings_theme">테마</string>
-  <string name="settings_advanced">고급 설정</string>
-  <string name="settings_appearance">외관</string>
-  <string name="settings_developer_options">개발자 옵션</string>
-  <string name="settings_developer_options_desc">무엇을 하고 있는지 모른다면 활성화 하지 마세요!</string>
-  <string name="setting_clear_cache">캐시 지우기</string>
+  <string name="settings_header_advanced">고급 설정</string>
+  <string name="settings_header_appearance">외관</string>
+  <string name="setting_developer_options">개발자 옵션</string>
+  <string name="setting_developer_options_desc">무엇을 하고 있는지 모른다면 활성화 하지 마세요!</string>
+  <string name="settings_clear_cache">캐시 지우기</string>
   <string name="setting_dynamic_color">동적 색상</string>
   <string name="setting_dynamic_color_desc">안드로이드 12 이상에서 Material You를 활성화해요</string>
   <string name="setting_keep_patched_apks">패치된 APK 유지</string>
   <string name="setting_keep_patched_apks_desc">설치 후 패치된 APK를 삭제하지 않아요 (수동 설치용)</string>
   <string name="setting_keep_patched_apks_error">이 기기는 외부 캐시 디렉토리를 지원하지 않아요!</string>
-  <string name="setting_see_patched_apks">패치된 APK 보기</string>
+  <string name="settings_see_patched_apks">패치된 APK 보기</string>
   <string name="theme_system">시스템</string>
   <string name="theme_dark">어두운 테마</string>
   <string name="theme_light">밝은 테마</string>
