--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Nie udało się uruchomić Aliucorda</string>
   <string name="settings_theme">Motyw</string>
-  <string name="settings_advanced">Zaawansowane</string>
-  <string name="settings_appearance">Wygląd</string>
-  <string name="settings_developer_options">Opcje dla programistów</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Wyczyść pamięć podręczną</string>
+  <string name="settings_header_advanced">Zaawansowane</string>
+  <string name="settings_header_appearance">Wygląd</string>
+  <string name="setting_developer_options">Opcje dla programistów</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Wyczyść pamięć podręczną</string>
   <string name="setting_dynamic_color">Kolor dynamiczny</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Zachowaj zpatchowane APK</string>
   <string name="setting_keep_patched_apks_desc">Nie usuwaj skasowanych APK po instalacji (dla instalacji ręcznej)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">System</string>
   <string name="theme_dark">Ciemny</string>
   <string name="theme_light">Jasny</string>
