--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Falha ao executar Aliucord</string>
   <string name="settings_theme">Tema</string>
-  <string name="settings_advanced">Avançado</string>
-  <string name="settings_appearance">Aparência</string>
-  <string name="settings_developer_options">Opções de desenvolvedor</string>
-  <string name="settings_developer_options_desc">Não ative isso a menos que saiba o que está fazendo!</string>
-  <string name="setting_clear_cache">Limpar cache</string>
+  <string name="settings_header_advanced">Avançado</string>
+  <string name="settings_header_appearance">Aparência</string>
+  <string name="setting_developer_options">Opções de desenvolvedor</string>
+  <string name="setting_developer_options_desc">Não ative isso a menos que saiba o que está fazendo!</string>
+  <string name="settings_clear_cache">Limpar cache</string>
   <string name="setting_dynamic_color">Cor dinâmica</string>
   <string name="setting_dynamic_color_desc">Habilita o tema Material You no Android 12+</string>
   <string name="setting_keep_patched_apks">Manter APKs patcheadas</string>
   <string name="setting_keep_patched_apks_desc">Não excluir APKs patcheadas após a instalação (para instalação manual)</string>
   <string name="setting_keep_patched_apks_error">Este dispositivo não suporta diretórios de cache externos!</string>
-  <string name="setting_see_patched_apks">Ver APKs patcheadas</string>
+  <string name="settings_see_patched_apks">Ver APKs patcheadas</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Escuro</string>
   <string name="theme_light">Claro</string>
