--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Aliucord 啟動失敗</string>
   <string name="settings_theme">主題</string>
-  <string name="settings_advanced">進階</string>
-  <string name="settings_appearance">外觀</string>
-  <string name="settings_developer_options">開發人員選項</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">清除快取</string>
+  <string name="settings_header_advanced">進階</string>
+  <string name="settings_header_appearance">外觀</string>
+  <string name="setting_developer_options">開發人員選項</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">清除快取</string>
   <string name="setting_dynamic_color">動態色彩</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">保持補丁 APKs</string>
   <string name="setting_keep_patched_apks_desc">安裝後不刪除已安裝補丁的 APK（用於手動安裝）</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">跟隨系統</string>
   <string name="theme_dark">深色模式</string>
   <string name="theme_light">淺色模式</string>
