--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">Ingen installationer fundet!</string>
   <string name="launch_aliucord_fail">Aliucord kunne ikke startes</string>
   <string name="settings_theme">Tema</string>
-  <string name="settings_advanced">Avanceret</string>
-  <string name="settings_appearance">Udseende</string>
-  <string name="settings_developer_options">Udviklerindstillinger</string>
-  <string name="settings_developer_options_desc">Aktivér ikke dette, medmindre man ved, hvad man foretager sig!</string>
-  <string name="setting_clear_cache">Ryd cache</string>
+  <string name="settings_header_advanced">Avanceret</string>
+  <string name="settings_header_appearance">Udseende</string>
+  <string name="setting_developer_options">Udviklerindstillinger</string>
+  <string name="setting_developer_options_desc">Aktivér ikke dette, medmindre man ved, hvad man foretager sig!</string>
+  <string name="settings_clear_cache">Ryd cache</string>
   <string name="setting_dynamic_color">Dynamisk farve</string>
   <string name="setting_dynamic_color_desc">Aktiverer Materiale You-tematisering på Android 12+</string>
   <string name="setting_keep_patched_apks">Behold patchede APK\'er</string>
   <string name="setting_keep_patched_apks_desc">Behold alle fejlrettede filer og APK\'er efter installation til fejlretning.</string>
   <string name="setting_keep_patched_apks_error">Denne enhed understøtter ikke eksterne cachemapper!</string>
-  <string name="setting_see_patched_apks">Vis fejlrettede APK\'er</string>
+  <string name="settings_see_patched_apks">Vis fejlrettede APK\'er</string>
   <string name="theme_system">System</string>
   <string name="theme_dark">Mørkt</string>
   <string name="theme_light">Lyst</string>
