--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Impossible de démarrer Aliucord</string>
   <string name="settings_theme">Thème</string>
-  <string name="settings_advanced">Avancé</string>
-  <string name="settings_appearance">Apparence</string>
-  <string name="settings_developer_options">Options de développeur</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Vider le cache</string>
+  <string name="settings_header_advanced">Avancé</string>
+  <string name="settings_header_appearance">Apparence</string>
+  <string name="setting_developer_options">Options de développeur</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Vider le cache</string>
   <string name="setting_dynamic_color">Couleurs dynamiques</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Garder les APKs patchés</string>
   <string name="setting_keep_patched_apks_desc">Ne pas supprimer les APKs patchés après l\'installation (pour les installer manuellement)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">Système</string>
   <string name="theme_dark">Sombre</string>
   <string name="theme_light">Clair</string>
