--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Avvio di Aliucord non riuscito</string>
   <string name="settings_theme">Tema</string>
-  <string name="settings_advanced">Advanced</string>
-  <string name="settings_appearance">Aspetto</string>
-  <string name="settings_developer_options">Opzioni sviluppatore</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Pulisci cache</string>
+  <string name="settings_header_advanced">Advanced</string>
+  <string name="settings_header_appearance">Aspetto</string>
+  <string name="setting_developer_options">Opzioni sviluppatore</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Pulisci cache</string>
   <string name="setting_dynamic_color">Dynamic color</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Scuro</string>
   <string name="theme_light">Chiaro</string>
