--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Falha ao iniciar Aliucord</string>
   <string name="settings_theme">Tema</string>
-  <string name="settings_advanced">Avançado</string>
-  <string name="settings_appearance">Aparência</string>
-  <string name="settings_developer_options">Opções de programador</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Limpar cache</string>
+  <string name="settings_header_advanced">Avançado</string>
+  <string name="settings_header_appearance">Aparência</string>
+  <string name="setting_developer_options">Opções de programador</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Limpar cache</string>
   <string name="setting_dynamic_color">Cor dinâmica</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Não apague APKs modificados após a sua instalação (para instalação manualmente)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Escuro</string>
   <string name="theme_light">Claro</string>
