--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">Установки не найдены!</string>
   <string name="launch_aliucord_fail">Не удалось запустить Aliucord</string>
   <string name="settings_theme">Тема</string>
-  <string name="settings_advanced">Дополнительные</string>
-  <string name="settings_appearance">Внешний вид</string>
-  <string name="settings_developer_options">Настройки для разработчиков</string>
-  <string name="settings_developer_options_desc">Не включайте это, если не знаете, что делаете!</string>
-  <string name="setting_clear_cache">Очистить кеш</string>
+  <string name="settings_header_advanced">Дополнительные</string>
+  <string name="settings_header_appearance">Внешний вид</string>
+  <string name="setting_developer_options">Настройки для разработчиков</string>
+  <string name="setting_developer_options_desc">Не включайте это, если не знаете, что делаете!</string>
+  <string name="settings_clear_cache">Очистить кеш</string>
   <string name="setting_dynamic_color">Динамические цвета</string>
   <string name="setting_dynamic_color_desc">Включает тему Material You на Android 12+</string>
   <string name="setting_keep_patched_apks">Сохранять пропатченные APK</string>
   <string name="setting_keep_patched_apks_desc">Не удалять пропатченные APK после установки (для ручной установки)</string>
   <string name="setting_keep_patched_apks_error">Это устройство не поддерживает внешние папки кэша!</string>
-  <string name="setting_see_patched_apks">Просмотреть пропатченные APK</string>
+  <string name="settings_see_patched_apks">Просмотреть пропатченные APK</string>
   <string name="theme_system">Системная</string>
   <string name="theme_dark">Тёмная</string>
   <string name="theme_light">Светлая</string>
