--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -39,17 +39,17 @@
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Không thể khởi động Aliucord</string>
   <string name="settings_theme">Chủ đề</string>
-  <string name="settings_advanced">Nâng cao</string>
-  <string name="settings_appearance">Giao diện</string>
-  <string name="settings_developer_options">Tùy chọn nhà phát triển</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Xoá bộ nhớ đệm</string>
+  <string name="settings_header_advanced">Nâng cao</string>
+  <string name="settings_header_appearance">Giao diện</string>
+  <string name="setting_developer_options">Tùy chọn nhà phát triển</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="settings_clear_cache">Xoá bộ nhớ đệm</string>
   <string name="setting_dynamic_color">Màu động</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Giữ lại các bản vá APKs</string>
   <string name="setting_keep_patched_apks_desc">Không xóa bỏ các bản vá APKs sau khi cài đặt (dành cho cài đặt thủ công)</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
   <string name="theme_system">Hệ thống</string>
   <string name="theme_dark">Tối</string>
   <string name="theme_light">Sáng</string>
