--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,18 +42,19 @@
   <string name="installs_no_installs">No installations found!</string>
   <string name="launch_aliucord_fail">Failed to launch Aliucord</string>
 
-  <string name="settings_theme">Theme</string>
-  <string name="settings_advanced">Advanced</string>
-  <string name="settings_appearance">Appearance</string>
-  <string name="settings_developer_options">Developer options</string>
-  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
-  <string name="setting_clear_cache">Clear cache</string>
+  <string name="settings_header_advanced">Advanced</string>
+  <string name="settings_header_appearance">Appearance</string>
+  <string name="setting_theme">Theme</string>
+  <string name="setting_theme_desc">The theme to apply to this app</string>
   <string name="setting_dynamic_color">Dynamic color</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
+  <string name="setting_developer_options">Developer options</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installing for debugging.</string>
+  <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installing for debugging. This setting may drastically slow down (20x) patching on certain devices!</string>
   <string name="setting_keep_patched_apks_error">This device does not support external cache directories!</string>
-  <string name="setting_see_patched_apks">See patched APKs</string>
+  <string name="settings_clear_cache">Clear cache</string>
+  <string name="settings_see_patched_apks">See patched APKs</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
