--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,7 @@
   <string name="patch_step_fetch_kt_version">Fetching target Discord version</string>
   <string name="patch_step_downgrade_check">Checking for newer installations</string>
   <string name="patch_step_dl_kt_apk">Downloading Discord APK</string>
-  <string name="patch_step_dl_kotlin">Downloading Kotlin Stdlib</string>
+  <string name="patch_step_dl_kotlin">Downloading Kotlin library</string>
   <string name="patch_step_dl_injector">Downloading Aliucord Injector</string>
   <string name="patch_step_dl_aliuhook">Downloading Aliuhook library</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
