--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,9 +53,9 @@
   <string name="setting_developer_options">Developer options</string>
   <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installing for debugging. This setting may drastically slow down (20x) patching on certain devices!</string>
+  <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installation for debugging purposes. Note that exporting the APK is only useful after a successful patching session.</string>
   <string name="settings_clear_cache">Clear cache</string>
-  <string name="settings_see_patched_apks">See patched APKs</string>
+  <string name="settings_export_apk">Export APK</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
@@ -205,6 +205,7 @@
   <string name="log_section_error">Error Stacktrace</string>
   <string name="log_section_log">Installation Log</string>
   <string name="log_action_export">Export log</string>
+  <string name="log_action_export_apk">Export APK</string>
   <string name="log_action_share">Share log</string>
 
   <string name="logs_title">Logs</string>
